--- a/package.json
+++ b/package.json
@@ -15,7 +15,17 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "firebase": "8.2.3",
+
+
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^5.9.8",
+    "@react-navigation/stack": "^5.14.9",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
